module/azurerm_nsg/main.tf
resource "azurerm_network_security_group" "nsg" {
  for_each            = var.nsgdetails
  name                = each.value.name
  location            = each.value.location
  resource_group_name = each.value.resource_group_name

  # SSH
  security_rule {

    name                       = "Allow-SSH"

    priority                   = 100

    direction                  = "Inbound"

    access                     = "Allow"

    protocol                   = "Tcp"

    source_port_range          = "*"

    destination_port_range     = "22"

    source_address_prefix      = "*"

    destination_address_prefix = "*"

  }

  # HTTP
  security_rule {

    name                       = "Allow-HTTP"

    priority                   = 110

    direction                  = "Inbound"

    access                     = "Allow"

    protocol                   = "Tcp"

    source_port_range          = "*"

    destination_port_range     = "80"

    source_address_prefix      = "*"

    destination_address_prefix = "*"

  }

}
